--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "@nx/js": "22.0.2",
     "@nx/vite": "22.0.2",
     "@nx/web": "22.0.2",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "^1.15.0",
+    "@swc/helpers": "~0.5.11",
     "@types/node": "24.10.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "eslint": "9.39.1",
-    "eslint-plugin-boundaries": "^5.1.0",
-    "eslint-plugin-import": "^2.32.0",
     "globals": "^16.5.0",
-    "jiti": "2.4.2",
     "nx": "22.0.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
