feat(account): minimal third setup

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,31 +6,66 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-      - name: Install
-        run: npm ci
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - name: Verify pnpm
+        run: |
+          which pnpm || echo "pnpm not found"
+          pnpm -v
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
       - name: Lint
-        run: npm run lint
+        run: pnpm run lint
 
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-      - name: Install
-        run: npm ci
-      - name: Test (no watch)
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - name: Verify pnpm
+        run: |
+          which pnpm || echo "pnpm not found"
+          pnpm -v
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Test
         env:
           CI: 1
-        run: npm run test
+        run: pnpm run test
