--- a/nx.json
+++ b/nx.json
@@ -63,6 +63,9 @@
       "cache": true,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
