--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@webtiers-ddd-poc/source",
   "private": true,
   "type": "module",
+  "workspaces": ["packages/**/*"],
+  "packageManager": "pnpm@10.20.0",
   "scripts": {
     "build": "nx run-many --target=build --all",
     "lint": "nx run-many -t lint --all",
@@ -26,12 +28,16 @@
     "@vitest/ui": "^3.0.0",
     "eslint": "9.39.1",
     "globals": "^16.5.0",
+    "jiti": "2.4.2",
     "nx": "22.0.2",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.0.0",
-    "vitest": "^3.0.0"
-  }
+    "vitest": "^3.0.0",
+    "tsup": "^7.3.0",
+    "rimraf": "^5.0.5"
+  },
+  "dependencies": {}
 }
