--- a/packages/shared/application/project.json
+++ b/packages/shared/application/project.json
@@ -1,21 +1,33 @@
 {
-  "name": "shared/application",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "name": "@webtiers-ddd-poc/shared-application",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/shared/application/src",
   "projectType": "library",
   "targets": {
     "build": {
-      "executor": "@nx/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "nx:run-commands",
+      "dependsOn": ["^build"],
       "options": {
-        "outputPath": "dist/packages/shared/application",
-        "main": "packages/shared/application/src/index.ts",
-        "tsConfig": "packages/shared/application/tsconfig.lib.json",
-        "assets": [
-          "packages/shared/application/*.md"
-        ]
+        "command": "pnpm --filter @webtiers-ddd-poc/shared-application run build"
+      },
+      "outputs": ["{projectRoot}/dist"]
+    },
+    "lint": {
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": ["packages/shared/application/src/**/*.ts"]
+      }
+    },
+    "clean": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "pnpm --filter @webtiers-ddd-poc/shared-application run clean"
+      }
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "pnpm --filter @webtiers-ddd-poc/shared-application run typecheck"
       }
     }
   },
