--- a/packages/company-registry/application/package.json
+++ b/packages/company-registry/application/package.json
@@ -21,6 +21,9 @@
     "clean": "rimraf dist",
     "typecheck": "tsc -p tsconfig.lib.json --noEmit"
   },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
     "@webtiers-ddd-poc/shared-application": "workspace:*",
     "@webtiers-ddd-poc/company-registry-domain": "workspace:*"
